# finguard

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  EXPORT_BUTTON_PLACEMENT.md  MOBILE_REFACTOR_COMPLETE.md  Makefile  README.md  REDESIGN_SUMMARY.md  SETTINGS_REDESIGN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/actions/: __init__.py  server.py
backend/actions/chat/: __init__.py  engine.py  factory.py  router.py  session.py  session_store.py  settings.py  webhook.py
backend/actions/chat/dialogue/: __init__.py  collector.py  engine.py  session_state.py
backend/actions/chat/domain/: __init__.py  intents.py  session.py  slots.py
backend/actions/db/: __init__.py  client.py  local_user.py  queries.py  schema.py
backend/actions/handlers/: __init__.py  delete_transaction.py  get_balance.py  list_transactions.py  query_spending.py  record_transaction.py  session_start.py  update_transaction.py
backend/actions/models/: __init__.py  transaction.py
backend/actions/services/: __init__.py  create_transaction.py  delete_transaction.py  get_balance.py  list_transactions.py  profile.py  query_spending.py  record_transaction.py  types.py  update_transaction.py
backend/actions/utils/: __init__.py  categories.py  dates.py  formatting.py  i18n.py  logging.py  pending.py
backend/litellm/: config.yaml
backend/rasa/: config.yml  credentials.yml  domain.yml  endpoints.yml
backend/rasa/tests/: conftest.yml  e2e_test_cases.yml
backend/scripts/: spike_router.py  verify-stack.sh
backend/tests/: conftest.py  test_mock_rasa.py  test_server.py  test_server_data.py
backend/tests/fixtures/: router_routes.yaml  utterances-vi.jsonl  utterances.jsonl
backend/tests/test_chat/: test_confirm_webhook.py  test_extract_composite.py  test_extract_llm.py  test_extract_rules.py  test_router.py  test_router_semantic.py  test_routes_loader.py  test_routing_composite.py  test_routing_hybrid.py  test_session_persist.py  test_transaction_draft.py  test_vietnamese_rules.py  test_webhook.py  test_webhook_pending.py  test_webhook_reports.py  test_webhook_vietnamese.py
backend/tests/test_db/: test_chat_sessions.py  test_queries.py
backend/tests/test_extraction/: test_period.py
backend/tests/test_handlers/: test_confirm_flow_integration.py  test_delete_transaction.py  test_get_balance.py  test_list_transactions.py  test_query_spending.py  test_record_transaction.py  test_session_start.py  test_update_transaction.py
backend/tests/test_services/: test_delete_transaction.py  test_record_confirm.py  test_reports.py
backend/tests/test_utils/: test_categories.py  test_dates.py  test_formatting.py  test_pending.py
(+300 files in other folders)
